# PVI

./: .gitignore  app.js  dashboard.html  docker-compose.yml  index.html  main.css  service-worker.js  students.html  style.css  tasks.html
PVI/: service-worker.js
back-end/: main.py  pyproject.toml
back-end/app/: main.py
back-end/app/actions/: populate_student.py
back-end/app/api/: __init__.py
back-end/app/api/v1/: __init__.py
back-end/app/api/v1/messages/: __init__.py  controllers.py  services.py
back-end/app/api/v1/students/: __init__.py  controllers.py  services.py
back-end/app/core/: __init__.py  config.py  helpers.py  logger.py
back-end/app/core/models/: __init__.py  messages.py  student.py
back-end/app/core/schemas/: __init__.py  messages.py  student.py
dashboard_page/: dashboard.html
front-end/: app.js  index.html  login.css  login.js  main.css  service-worker.js
front-end/dashboard_page/: dashboard.html
front-end/messages_page/: messages.css  messages.html  messages.js
front-end/students_page/: students.html  students.js
front-end/tasks_page/: tasks.html
messages_page/: messages.html
pwa/: init_sw.js  manifest.json
students_page/: students.css  students.html  students.js
tasks_page/: tasks.html
