[project]
name = "back-end"
version = "0.1.0"
description = ""
authors = [
    {name = "Dou6leR",email = "rostyslawoo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "uvicorn[standard] (>=0.34.1,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "beanie (>=1.29.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
